<resources>
    <string name="app_name">My Edx</string>
    <string name="summary">Free courses from the world\'s best universities in  your pocket.</string>
    <string name="create_your_account">Create your Account</string>
    <string name="login">login</string>

    <string name="discovery">Discovery</string>
    <string name="courses">Courses</string>
    <string name="VERIFY">VERIFIED</string>
    <string name="microsoft">Microsoft</string>
    <string name="introduction_to_python">Introduction to Python</string>
    <string name="current_n_self_placed">Current   \nSelf-Placed</string>


    <string name="introduction_to_python_fundamentals">Introduction to Python: \nFundamentals</string>
    <string name="build_on_what_you_learned_in_the_introduction_to_python_absolute_beginner_course_and_dig_into_data_structure_basics">Build on what you learned in the “Introduction to Python: Absolute Beginner” course, and dig into data structure basics.</string>
    <string name="enroll_now">Enroll Now</string>
    <string name="about_course">About Course</string>
    <string name="descriptions">This course is part of the Microsoft Professional Program in Entry-Level Software Development. Ready for more hands-on, step-by-step Python fundamentals? Add to the foundational experience you got in the Introduction to Python: Absolute Beginner, and explore data structures. Get lots of practice working with sample code in Jupyter Notebooks on Azure, which require only a browser and an Internet connection. Focus on Python data structures, and work with string, list, and range sequences. Discover the power of list iteration, and learn about string and list methods. From there, get the details on file input and output—open files, read them, add to them, close them, and more. At the end of the course, you’ll be able to slice strings into substrings, create lists, iterate through them, import files, and use file append mode, along with a lot of other practical Python tasks, as you get started coding.From there, get the details on file input and output—open files, read them, add to them, close them, and more. At the end of the course, you’ll be able to slice strings into substrings, create lists, iterate through them, import files, and use file append mode, along with a lot of other practical Python tasks, as you get started coding</string>
    <string name="discover">Discover</string>

    <string name="search_courses">Search Courses</string>
    <string name="search_for_courses">Search for courses !</string>
    <string name="nulll">null</string>
</resources>
