<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bnk.myedx.MainActivity"
    android:orientation="vertical"
    android:padding="30dp">

    <ImageView
        android:layout_marginTop="60dp"
        android:layout_width="80dp"
        android:layout_height="40dp" 
        android:src="@drawable/edx"/>
    <TextView
        android:textColor="@color/blue"
        android:layout_marginTop="20dp"
        android:textSize="25sp"
        android:text="@string/summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <LinearLayout
        android:orientation="horizontal"
        android:gravity="bottom"
        android:layout_gravity="bottom"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">
    <Button
        android:id="@+id/create"
        android:layout_marginEnd="15dp"
        android:gravity="center"
        android:layout_gravity="bottom"
        android:padding="10dp"
        android:textSize="20sp"
        android:textColor="#ffffff"
        android:textAllCaps="false"
        android:text="@string/create_your_account"
        android:background="@color/blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
        <Button
            android:id="@+id/login"
            android:gravity="center"
            android:layout_gravity="bottom"
            android:padding="10dp"
            android:textSize="20sp"
            android:background="#ffffff"
            android:textAllCaps="false"
            android:text="@string/login"
            android:textColor="@color/blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>
